# ddclient-wrapper

./: .gitignore  Dockerfile  Makefile  README.md  config_spec.yaml  docker_entrypoint.sh  manifest.yaml
configurator/: Cargo.toml
configurator/src/: main.rs
docs/: instructions.md
